--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
     <title>Pagina de ropa</title>
     <body>
         <div class="contenedor">
-            <div class="header"> HEADER </div>
-            <div class="menu"> MENU</div>
-            <div class="contenido"> CONTENIDO </div>
-            <div class="footer"> PIE DE PAGINA </div>
+            <div class="header">
+                <p class="titulo">PÁGINA DE ROPA</p>
+            </div>
+            <div class="menu">
+                <p class="inicio">INICIO</p>
+                <p class="imagenes">GALERIA DE IMAGENES</p>
+                <p class="faq">PREGUNTAS FRECUENTES</p>
+                <p class="contacto">CONTACTO</p>
+            </div>
+            <div class="contenido"> CONTENIDO</div>
+            <div class="footer"> PIE DE PAGINA</div>
             </div>
 
     </body>
