--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
                 <p class="titulo">PÁGINA DE ROPA</p>
             </div>
             <div class="menu">
-                <p class="inicio">INICIO</p>
-                <p class="imagenes">GALERIA DE IMAGENES</p>
-                <p class="faq">PREGUNTAS FRECUENTES</p>
-                <p class="contacto">CONTACTO</p>
+                <p class="inicio"><a href="index.html" target="_blank">INICIO</a></p>
+                <p class="imagenes"><a href="galeria.html" target="_blank">GALERIA DE IMÁGENES</a></p>
+                <p class="faq"><a href="faq.html" target="_blank">PREGUNTAS FRECUENTES</a></p>
+                <p class="contacto"><a href="contacto.html" target="_blank">CONTACTO</a></p>
             </div>
             <div class="contenido"> CONTENIDO</div>
             <div class="footer"> PIE DE PAGINA</div>
