--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>Pagina de ropa</title>
     <body>
         <div class="contenedor">
-            <div class="header">
+            <header class="header">
                 <p class="titulo">PÁGINA DE ROPA</p>
-            </div>
+            </header>
             <div class="menu">
                 <p class="inicio">INICIO</p>
                 <p class="imagenes">GALERIA DE IMAGENES</p>
