--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/Style.css">
+    <link rel="stylesheet" href="css/estilos.css">
     <script src="javascript/js.js"></script>
-    <title>Pagina de ropa</title>
-    <body>
-        <div class="contenedor">
-            <div class="header">
-                <p class="titulo">PÁGINA DE ROPA</p>
-            </div>
-            <div class="menu">
-                <p class="inicio"><a href="index.html" target="_blank">INICIO</a></p>
-                <p class="imagenes"><a href="galeria.html" target="_blank">GALERIA DE IMÁGENES</a></p>
-                <p class="faq"><a href="faq.html" target="_blank">PREGUNTAS FRECUENTES</a></p>
-                <p class="contacto"><a href="contacto.html" target="_blank">CONTACTO</a></p>
-            </div>
-            <div class="contenido"> CONTENIDO</div>
-            <div class="footer"> PIE DE PAGINA</div>
-            </div>
-
-    </body>
-    </html>
+    <link rel="icon" href="img/percha.ico">
+    <title>Página de ropa - Inicio</title>
+</head>
+<body>
+    <div class="contenedor">
+        <div header="header"></header>
+        <nav class="menu">
+            <p class="inicio"><a href="index.html" target="_blank">INICIO</a></p>
+            <p class="galeria"><a href="galeria.html" target="_blank">GALERIA</a></p>
+            <p class="faq"><a href="faq.html" target="_blank">PREGUNTAS FRECUENTES</a></p>
+            <p class="contacto"><a href="contacto.html" target="_blank">CONTACTO</a></p>
+        </nav>
+        <section class="contenido"></section>
+        <footer class="footer">
+            <p class="derechos">Página creada por el grupo 19, comision 23036 Codo a Codo. Todos los derechos reservados &copy;</p>
+        </footer>
+     </div>
+</body>
+</html>
