Incorporación de botones

--- a/contacto.html
+++ b/contacto.html
@@ -21,8 +21,8 @@
     <label for="reclamo">Descargo de reclamo:</label>
     <textarea id="reclamo" name="reclamo" placeholder="Indicar cantidad y codigo de articulo que seas ingresar al reclamo." cols="30" rows="30"></textarea>
 </fieldset>
-
-
+  <button type="reset">Eliminar</button>
+  <button type="submit">Enviar</button>
 
 
     </form>
