--- a/index.html
+++ b/index.html
@@ -4,21 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="css/index.css">
     <script src="javascript/js.js"></script>
     <link rel="icon" href="img/percha.ico">
+
     <title>Página de ropa - Inicio</title>
 </head>
 <body>
     <div class="contenedor">
-        <div header="header"></header>
+        <div class="header">HEADER</header> </div>
         <nav class="menu">
             <p class="inicio"><a href="index.html" target="_blank">INICIO</a></p>
             <p class="galeria"><a href="galeria.html" target="_blank">GALERIA</a></p>
             <p class="faq"><a href="faq.html" target="_blank">PREGUNTAS FRECUENTES</a></p>
             <p class="contacto"><a href="contacto.html" target="_blank">CONTACTO</a></p>
         </nav>
-        <section class="contenido"></section>
+        <section class="contenido">
+            <div class="iconoContenedor">
+                <div class="divIconos">
+                    <span class="material-symbols-outlined iconos">credit_card</span>
+                    <h3>TARJETA</h3>
+                </div>
+                <div class="divIconos">
+                    <span class="material-symbols-outlined iconos">verified_user</span>
+                    <h3>ESCUDO</h3>
+                </div>
+                <div class="divIconos">
+                    <span class="material-symbols-outlined iconos">autorenew</span>
+                    <h3>CIRCULO</h3>
+                </div>
+                <div class="divIconos">
+                    <span class="material-symbols-outlined iconos">paid</span>
+                    <h3>PESO</h3>
+                </div>
+
+                        
+                            
+            </div>
+
+
+        </section>
         <footer class="footer">
             <p class="derechos">Página creada por el grupo 19, comision 23036 Codo a Codo. Todos los derechos reservados &copy;</p>
         </footer>
