--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 <div class="header"><h1 class="principal">SportAr</h1></header> </div>
 <nav class="menu">
     <p class="inicio"><a href="index.html" target="_blank">INICIO</a></p>
-    <p class="galeria"><a href="htlm/galeria.html" target="_blank">GALERIA</a></p>
-    <p class="faq"><a href="html/faq.html" target="_blank">PREGUNTAS FRECUENTES</a></p>
-    <p class="contacto"><a href="html/contacto.html" target="_blank">CONTACTO</a></p>
+    <p class="galeria"><a href="galeria.html" target="_blank">GALERIA</a></p>
+    <p class="faq"><a href="faq.html" target="_blank">PREGUNTAS FRECUENTES</a></p>
+    <p class="contacto"><a href="contacto.html" target="_blank">CONTACTO</a></p>
 </nav>
 
 <div class="container">
