--- a/htlm/galeria.html
+++ b/htlm/galeria.html
@@ -9,8 +9,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
    
    <!--Los js de la galeria los agrego en este archivo, luego los unificamos-->
-    <!-- <script src="../javascript/jquery-3.7.0.js"></script>
-    <script src="../javascript/js_galeria.js"></script> -->
+    <script src="../javascript/jquery-3.7.0.js"></script>
+    <script src="../javascript/js_galeria.js"></script> 
 
     <!--Los estilos de la galeria los agrego en este archivo, luego los unificamos-->
     <link rel="stylesheet" href="../css/estilos_galeria.css">
@@ -42,16 +42,16 @@
 
                     <ul class="nav-filtro">                       
                         <li>
-                            <img src="../img/ropa.png" align="left" width="26" /> 
-                            <a href= "#" category="Indumentaria" >Indumentaria </a>
+                            <!-- <img src="../img/ropa.png" align="left" width="26" />  -->
+                            <a href= "#" class="category_item" category="Indumentaria" >Indumentaria </a>
                         </li>
                         <li>
-                            <img src="../img/calzado.png" align="left" width="26"/> 
-                            <a href= "#" category="Calzado" >Calzado </a>
+                            <!-- <img src="../img/calzado.png" align="left" width="26"/>  -->
+                            <a href= "#" class="category_item" category="Calzado" >Calzado </a>
                         </li>
                         <li>
-                            <img src="../img/accesorios.png" align="left" width="26"/> 
-                            <a href= "#" category="Accesorios" >Accesorios </a>
+                            <!-- <img src="../img/accesorios.png" align="left" width="26"/>  -->
+                            <a href= "#" class="category_item" category="Accesorios" >Accesorios </a>
                         </li>
                     </ul>
                 </div>
@@ -66,6 +66,7 @@
 
                         <p>Remera New Balance</p>
                         <p>$ 3.500</p>
+                        
                     </div>
                     <div class="card" category="Indumentaria">
                         <img src="../img/remera2.jpg" alt="Remera Numero 2" title="Remera 2" itemprop="image" width="75%" height="75%">
