--- a/htlm/galeria.html
+++ b/htlm/galeria.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="../css/index.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
    
+    <!--Para los iconos de las card-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Icons+Outlined">
+
    <!--Los js de la galeria los agrego en este archivo, luego los unificamos-->
     <script src="../javascript/jquery-3.7.0.js"></script>
     <script src="../javascript/js_galeria.js"></script> 
@@ -66,7 +69,8 @@
 
                         <p>Remera New Balance</p>
                         <p>$ 3.500</p>
-                        
+                       
+                        <span class="material-icons-outlined">credit_card</span>
                     </div>
                     <div class="card" category="Indumentaria">
                         <img src="../img/remera2.jpg" alt="Remera Numero 2" title="Remera 2" itemprop="image" width="75%" height="75%">
