--- a/htlm/galeria.html
+++ b/htlm/galeria.html
@@ -67,10 +67,17 @@
                     <div class="card" category="Indumentaria" >
                         <img src="../img/remera1.jpg" alt="Remera Numero 1" title="Remera 1" itemprop="image" width="75%" height="75%">
 
-                        <p>Remera New Balance</p>
-                        <p>$ 3.500</p>
-                       
-                        <span class="material-icons-outlined">credit_card</span>
+                        <p>Remera New Balance
+                            <span style="color:red">
+                                <span class="material-icons-outlined">discount</span>
+                            30%</span>
+                        </p>
+                        <p>$ 4.500</p>
+                        <p>
+                            <span class="material-icons-outlined">credit_card</span>
+                            3 cuotas de $ 1.500
+                        </p>
+
                     </div>
                     <div class="card" category="Indumentaria">
                         <img src="../img/remera2.jpg" alt="Remera Numero 2" title="Remera 2" itemprop="image" width="75%" height="75%">
@@ -124,16 +131,11 @@
             </div>
 
         </section>
-
-
-     </div>
-
-     <div>
-        <!-- Footer - Pie de página igual que el index -->
+         <!-- Footer - Pie de página igual que el index -->
         <footer class="footer">
             <p class="derechos">Página creada por el grupo 19, comision 23036 Codo a Codo. Todos los derechos reservados &copy;</p>
         </footer>
-     </div>
+    </div>
 
 </body>
 </html>
