--- a/htlm/galeria.html
+++ b/htlm/galeria.html
@@ -14,6 +14,7 @@
    <!--Los js de la galeria los agrego en este archivo, luego los unificamos-->
     <script src="../javascript/jquery-3.7.0.js"></script>
     <script src="../javascript/js_galeria.js"></script> 
+    <script src="../javascript/productos.js"></script> 
 
     <!--Los estilos de la galeria los agrego en este archivo, luego los unificamos-->
     <link rel="stylesheet" href="../css/estilos_galeria.css">
@@ -64,6 +65,8 @@
 
                 <div class="container_card">
 
+                    <!-- <div id="cargar_galeria"></div> -->
+
                     <div class="card" category="Indumentaria" >
                         <img src="../img/remera1.jpg" alt="Remera Numero 1" title="Remera 1" itemprop="image" width="75%" height="75%">
 
@@ -79,6 +82,7 @@
                         </p>
 
                     </div>
+                    
                     <div class="card" category="Indumentaria">
                         <img src="../img/remera2.jpg" alt="Remera Numero 2" title="Remera 2" itemprop="image" width="75%" height="75%">
                         <p>Card 2</p>
@@ -124,8 +128,7 @@
                     <div class="card" category="Accesorios">
                         <img src="../img/accesorio3.jpg" alt="Accesorios 3" title="Accesorios 3" itemprop="image" width="75%" height="75%">
                         <p>Card 12</p>
-                    </div>
-
+                    </div>  
 
                 </div>
             </div>
