--- a/index.html
+++ b/index.html
@@ -33,23 +33,23 @@
                 <div class="carousel-item">
                     <a href="htlm/galeria.html" target="_blank"><h2 class="subtitulo">Pelota</h2></a>
                     <div class="linea-division"></div>
-                    <img class="accesorio" src="img/accesorio1.jpg" alt="">
+                    <img class="accesorio" src="img/carusel/pelota.png" alt="">
                     </div>
             <div class="carousel-item">
                 <a href="htlm/galeria.html" target="_blank"><h2 class="subtitulo">Remera</h2></a>
-                <img class="accesorio" src="img/remera1.jpg" alt="">
+                <img class="accesorio" src="img/carusel/remera.png" alt="">
                 </div>
             <div class="carousel-item">
                 <a href="htlm/galeria.html" target="_blank"><h2 class="subtitulo">Gorra</h2></a>
-                <img class="accesorio" src="img/accesorio3.jpg" alt="">
+                <img class="accesorio" src="img/carusel/gorra.png" alt="">
                 </div>
             <div class="carousel-item">
                 <a href="htlm/galeria.html" target="_blank"><h2 class="subtitulo">Zapatillas</h2></a>
-                <img class="accesorio" src="img/zapa1.jpg" alt="">
+                <img class="accesorio" src="img/carusel/zapatilla.png" alt="">
                 </div>
             <div class="carousel-item">
                 <a href="htlm/galeria.html" target="_blank"><h2 class="subtitulo">Bolso</h2></a>
-                <img class="accesorio" src="img/accesorio2.jpg" alt="">
+                <img class="accesorio" src="img/carusel/bolso.png" alt="">
                 </div>
             </div>
         </div>
