--- a/contacto.html
+++ b/contacto.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="icon" href="img/percha.ico">
+    <title>SportAr | Contacto</title>
 </head>
 <body>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    <div class="header"><h1 class="principal">SportAr</h1></header> </div>
+    <nav class="menu">
+        <p class="navi"><a href="index.html" target="_blank">INICIO</a></p>
+        <p class="navi"><a href="htlm/galeria.html" target="_blank">GALERIA</a></p>
+        <p class="navi"><a href="faq.html" target="_blank">FAQ</a></p>
+        <p class="navi"><a href="contacto.html" target="_blank">CONTACTO</a></p>
+    </nav>
+
     <form action "" method="post">
 <fieldset>
     <legend>Para reclamos de compras realizadas y devoluciones</legend>
@@ -21,8 +34,8 @@
     <label for="reclamo">Descargo de reclamo:</label>
     <textarea id="reclamo" name="reclamo" placeholder="Indicar cantidad y codigo de articulo que seas ingresar al reclamo." cols="30" rows="30"></textarea>
 </fieldset>
-  <button type="reset">Eliminar</button>
-  <button type="submit">Enviar</button>
+    <button type="reset">Eliminar</button>
+    <button type="submit">Enviar</button>
 
 
     </form>
