--- a/contacto.html
+++ b/contacto.html
@@ -22,7 +22,8 @@
 
     <form action "" method="post">
 <fieldset>
-    <legend>Para reclamos de compras realizadas y devoluciones</legend>
+    <legend>Reclamos de compras realizadas y devoluciones</legend>
+    <p>Iniciemos juntos tu descargo: </p>
     <label for="name">Nombre:</label>
     <input type="text" id="name" name="name" required>
     <label for="lastname">Apellido:</label>
