--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
 <div class="container">
     <div class="row">
         <div class="col s12">
-            <h1 class="center-align titulo">¿Que estás buscando?</h1>
+            <h1 class="center-align titulo">¿Qué estás buscando?</h1>
                         
             <div class="carousel">
                 <div class="carousel-item">
-                    <a href="htlm/galeria.html" target="_blank"><h2 class="subtitulo">Pelota</h2></a>
+                    <a href="htlm/galeria.html" target="_blank"><h2 class="subtitulo">Pelotas</h2></a>
                     <div class="linea-division"></div>
                     <img class="accesorio" src="img/carusel/pelota.png" alt="">
                     </div>
             <div class="carousel-item">
-                <a href="htlm/galeria.html" target="_blank"><h2 class="subtitulo">Remera</h2></a>
+                <a href="htlm/galeria.html" target="_blank"><h2 class="subtitulo">Remeras</h2></a>
                 <img class="accesorio" src="img/carusel/remera.png" alt="">
                 </div>
             <div class="carousel-item">
-                <a href="htlm/galeria.html" target="_blank"><h2 class="subtitulo">Gorra</h2></a>
+                <a href="htlm/galeria.html" target="_blank"><h2 class="subtitulo">Gorras</h2></a>
                 <img class="accesorio" src="img/carusel/gorra.png" alt="">
                 </div>
             <div class="carousel-item">
@@ -51,7 +51,7 @@
                 <img class="accesorio" src="img/carusel/zapatilla.png" alt="">
                 </div>
             <div class="carousel-item">
-                <a href="htlm/galeria.html" target="_blank"><h2 class="subtitulo">Bolso</h2></a>
+                <a href="htlm/galeria.html" target="_blank"><h2 class="subtitulo">Bolsos</h2></a>
                 <img class="accesorio" src="img/carusel/bolso.png" alt="">
                 </div>
             </div>
@@ -65,7 +65,7 @@
         <div class="iconoContenedor">
             <div class="divIconos">
                 <span class="material-symbols-outlined iconos">credit_card</span>
-                <h3>¡CUOTAS SIN INTERESES!</h3>
+                <h3>¡CUOTAS SIN INTERES!</h3>
             </div>
             <div class="divIconos">
                 <span class="material-symbols-outlined iconos">verified_user</span>
@@ -73,7 +73,7 @@
             </div>
             <div class="divIconos">
                 <span class="material-symbols-outlined iconos">autorenew</span>
-                <h3>CAMBIO POR TALLES</h3>
+                <h3>CAMBIOS POR TALLES</h3>
             </div>
             <div class="divIconos">
                 <span class="material-symbols-outlined iconos">paid</span>
