--- a/contacto.html
+++ b/contacto.html
@@ -7,68 +7,42 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="icon" href="img/percha.ico">
     <title>SportAr | Contacto</title>
+    <script src="/javascript/contacto.js"> </script>
 </head>
-
 <body>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
     <div class="header"><h1 class="principal">SportAr</h1></header> </div>
     <nav class="menu">
-        <p class="navi"><a href="index.html" target="_self">INICIO</a></p>
-        <p class="navi"><a href="htlm/galeria.html" target="_self">GALERIA</a></p>
-        <p class="navi"><a href="faq.html" target="_self">FAQ</a></p>
-        <p class="navi"><a href="contacto.html" target="_self">CONTACTO</a></p>
+        <p class="navi"><a href="index.html" target="_blank">INICIO</a></p>
+        <p class="navi"><a href="htlm/galeria.html" target="_blank">GALERIA</a></p>
+        <p class="navi"><a href="faq.html" target="_blank">FAQ</a></p>
+        <p class="navi"><a href="contacto.html" target="_blank">CONTACTO</a></p>
     </nav>
 
-    <fieldset>
-        <legend>Crear Usuario</legend>
-            <label for="">Nombre</label>
-            <input type="text" id="name" name="name" maxlength="100" required>
-        
-            <label for="lastname">Apellido</label>
-            <input type="text" id="lastname" name="lastname" maxlength="100" required>
-
-            <label for="dni">DNI</label>
-            <input type="number" name="dni" id="dni" min="0" max="" required>
-
-            <label for="email">Mail</label> 
-            <input type="email" name="email" id="email" placeholder="Ej.Nombre.Apellido@..." required>
-
-            <label for="date">Fecha de nacimiento</label>
-            <input type="date" name="date" id="date" min="1990-01-01" max="2023-01-01">
-    </fieldset>
+    <form action "" method="post" id="form">
+<fieldset>
+    <legend>Reclamos de compras realizadas y devoluciones</legend>
+    <p>Iniciemos juntos tu descargo: </p>
+    <label for="name">Nombre:</label>
+    <input type="text" id="name" name="name" required>
+    <label for="lastname">Apellido:</label>
+    <input type="text" id="lastname" name="lastname" required>
+    <label for="email">Mail:</label>
+    <input type="email" id="email" name="email" required>
+    <label for="file">Adjuntar factura de pago y remito de entrega:</label>
+    <input type="file" id="file" name="file" accept=".pdf,.jpeg" multiple>
+    <label for="reclamo">Descargo de reclamo:</label>
+    <textarea id="reclamo" name="reclamo" placeholder="Indicar cantidad y código de tus articulo." cols="30" rows="30"></textarea>
+</fieldset>
+    <button type="reset">Eliminar</button>
     <button type="submit">Enviar</button>
+    <p id="warnings"></p>
 
-    <br><br>
 
-    <details>
-        <summary>Para reclamos de compras realizadas y devoluciones</summary>
-            <fieldset>
-                <label for="name">Nombre:</label>
-                <input type="text" id="name" name="name" required>
-
-                <label for="lastname">Apellido:</label>
-                <input type="text" id="lastname" name="lastname" required>
-
-                <label for="email">Mail:</label>
-                <input type="email" id="email" name="email" required>
-
-                <label for="file">Adjuntar factura de pago y remito de entrega:</label>
-                <input type="file" id="file" name="file" accept=".pdf,.jpeg" multiple>
-
-                <br><br>
-
-                <label for="reclamo">Descargo de reclamo:</label>
-                <textarea id="reclamo" name="reclamo" placeholder="Indicar cantidad y codigo de articulo que seas ingresar al reclamo." cols="30" rows="30"></textarea>
-            </fieldset>
-        <button type="reset">Eliminar</button>
-        <button type="submit">Enviar</button>
-    </details>
-
-    <footer class="footer">
-        <p class="derechos">Página creada por el grupo 19, comision 23036 Codo a Codo. Todos los derechos reservados &copy;</p>
-    </footer>
+    </form>
+    
 
 </body>
 </html>
