--- a/contacto.html
+++ b/contacto.html
@@ -15,10 +15,10 @@
 
     <div class="header"><h1 class="principal">SportAr</h1></header> </div>
     <nav class="menu">
-        <p class="navi"><a href="index.html" target="_blank">INICIO</a></p>
-        <p class="navi"><a href="htlm/galeria.html" target="_blank">GALERIA</a></p>
-        <p class="navi"><a href="faq.html" target="_blank">FAQ</a></p>
-        <p class="navi"><a href="contacto.html" target="_blank">CONTACTO</a></p>
+        <p class="navi"><a href="index.html">INICIO</a></p>
+        <p class="navi"><a href="htlm/galeria.html">GALERIA</a></p>
+        <p class="navi"><a href="faq.html">FAQ</a></p>
+        <p class="navi"><a href="contacto.html">CONTACTO</a></p>
     </nav>
 
     <form action "" method="post" id="form">
@@ -39,8 +39,6 @@
     <button type="reset">Eliminar</button>
     <button type="submit">Enviar</button>
     <p id="warnings"></p>
-
-
     </form>
     
 
