--- a/index.html
+++ b/index.html
@@ -19,12 +19,17 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
-<div class="header"><h1 class="principal">SportAr</h1></header> </div>
+<!-- <div class="header"><h1 class="principal">SportAr</h1></header> </div> -->
+
+
+<div class="header"><header><img class="logo" src="img/logo.png" alt=""></header> </div>
+
+
 <nav class="menu">
-    <p class="navi"><a href="index.html" target="_blank">INICIO</a></p>
-    <p class="navi"><a href="htlm/galeria.html" target="_blank">GALERIA</a></p>
-    <p class="navi"><a href="faq.html" target="_blank">FAQ</a></p>
-    <p class="navi"><a href="contacto.html" target="_blank">CONTACTO</a></p>
+    <p class="navi"><a href="index.html">INICIO</a></p>
+    <p class="navi"><a href="htlm/galeria.html">GALERIA</a></p>
+    <p class="navi"><a href="faq.html">FAQ</a></p>
+    <p class="navi"><a href="contacto.html">CONTACTO</a></p>
 </nav>
 
 <div class="container">
@@ -43,12 +48,12 @@
                 <img class="accesorio" src="img/carusel/remera.png" alt="">
                 </div>
             <div class="carousel-item">
-                <a href="htlm/galeria.html" target="_blank"><h2 class="subtitulo">Gorras</h2></a>
-                <img class="accesorio" src="img/carusel/gorra.png" alt="">
+                <a href="htlm/galeria.html" target="_blank"><h2 class="subtitulo">Camperas</h2></a>
+                <img class="accesorio" src="img/carusel/campera.png" alt="">
                 </div>
             <div class="carousel-item">
                 <a href="htlm/galeria.html" target="_blank"><h2 class="subtitulo">Zapatillas</h2></a>
-                <img class="accesorio" src="img/carusel/zapatilla.png" alt="">
+                <img class="accesorio" src="img/carusel/zapatillas.png" alt="">
                 </div>
             <div class="carousel-item">
                 <a href="htlm/galeria.html" target="_blank"><h2 class="subtitulo">Bolsos</h2></a>
@@ -79,7 +84,7 @@
                 <span class="material-symbols-outlined iconos">paid</span>
                 <h3>PAGÁ AL RECIBIR TUS PRODUCTOS</h3>
             </div>
-        </div>
+        </div>0
         </section>
         <footer class="footer">
             <p class="derechos">Página creada por el grupo 19, comision 23036 Codo a Codo. Todos los derechos reservados &copy;</p>
