--- a/contacto.html
+++ b/contacto.html
@@ -21,7 +21,7 @@
         <p class="navi"><a href="contacto.html">CONTACTO</a></p>
     </nav>
 
-    <form action "" method="post" id="form">
+    <form action="#" method="post" id="form">
 <fieldset>
     <legend>Reclamos de compras realizadas y devoluciones</legend>
     <p>Iniciemos juntos tu descargo: </p>
