--- a/contacto.html
+++ b/contacto.html
@@ -17,8 +17,8 @@
     <nav class="menu">
         <p class="navi"><a href="index.html">INICIO</a></p>
         <p class="navi"><a href="htlm/galeria.html">GALERIA</a></p>
-        <p class="navi"><a href="faq.html">FAQ</a></p>
-        <p class="navi"><a href="contacto.html">CONTACTO</a></p>
+        <p class="navi"><a href="htlm/faq.html">FAQ</a></p>
+        <p class="navi"><a href="htlm/contacto.html">CONTACTO</a></p>
     </nav>
 
     <form action="#" method="post" id="form">
