--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="css/mq_index.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="javascript/js.js"></script>
     <link rel="icon" href="img/percha.ico">
@@ -17,10 +19,6 @@
 </head>
 <body>
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
-<!-- <div class="header"><h1 class="principal">SportAr</h1></header> </div> -->
-
 
 <div class="header"><header><img class="logo" src="img/logo.png" alt=""></header> </div>
 
@@ -28,8 +26,8 @@
 <nav class="menu">
     <p class="navi"><a href="index.html">INICIO</a></p>
     <p class="navi"><a href="htlm/galeria.html">GALERIA</a></p>
-    <p class="navi"><a href="faq.html">FAQ</a></p>
-    <p class="navi"><a href="contacto.html">CONTACTO</a></p>
+    <p class="navi"><a href="htlm/faq.html">FAQ</a></p>
+    <p class="navi"><a href="htlm/contacto.html">CONTACTO</a></p>
 </nav>
 
 <div class="container">
@@ -84,7 +82,7 @@
                 <span class="material-symbols-outlined iconos">paid</span>
                 <h3>PAGÁ AL RECIBIR TUS PRODUCTOS</h3>
             </div>
-        </div>0
+        </div>
         </section>
         <footer class="footer">
             <p class="derechos">Página creada por el grupo 19, comision 23036 Codo a Codo. Todos los derechos reservados &copy;</p>
