--- a/faq.html
+++ b/faq.html
@@ -8,17 +8,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/faq.css">
+    <link rel="stylesheet" href="css\faq.css">
 </head>
 <body>
     <div class="contenedor">
         <div header="header"></header>
-        <nav class="menu">
-            <p class="inicio"><a href="index.html" target="_blank">INICIO</a></p>
-            <p class="galeria"><a href="galeria.html" target="_blank">GALERIA</a></p>
-            <p class="faq"><a href="faq.html" target="_blank">PREGUNTAS FRECUENTES</a></p>
-            <p class="contacto"><a href="contacto.html" target="_blank">CONTACTO</a></p>
-        </nav>
+            <nav class="menu">
+                <p class="navi"><a href="index.html">INICIO</a></p>
+                <p class="navi"><a href="htlm/galeria.html">GALERIA</a></p>
+                <p class="navi"><a href="htlm/faq.html">FAQ</a></p>
+                <p class="navi"><a href="htlm/contacto.html">CONTACTO</a></p>
+            </nav>
        <br>
         
         <section>
