--- a/htlm/galeria.html
+++ b/htlm/galeria.html
@@ -108,7 +108,20 @@
  -->
             </div>
 
-        
+            <!-- The Modal -->
+            <div id="myModal" class="modal">
+
+                <!-- The Close Button -->
+                <span class="close">&times;</span>
+  
+                <!-- Modal Content (The Image) -->
+                <img class="modal-content" id="img01">
+  
+                <!-- Modal Caption (Image Text) -->
+                <div id="caption"></div>
+                
+            </div>
+
 
         <div class="Pie">
          <!-- Footer - Pie de página igual que el index -->
