--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="css/mq_index.css">
+
+    <!-- <link rel="stylesheet" href="css/mq_index.css"> -->
+    <link rel="stylesheet" href="css/mediaq_mss.css">
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="javascript/js.js"></script>
     <link rel="icon" href="img/percha.ico">
@@ -18,7 +20,7 @@
 </head>
 <body>
 
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 <div class="header"><header><img class="logo" src="img/logo.png" alt=""></header> </div>
 
 <nav class="menu">
