--- a/index.html
+++ b/index.html
@@ -37,25 +37,25 @@
                         
             <div class="carousel">
                 <div class="carousel-item">
-                    <a href="htlm/galeria.html" target="_blank"><h2 class="subtitulo">Pelotas</h2></a>
+                    <a href="htlm/galeria.html" ><h2 class="subtitulo">Pelotas</h2></a>
                     <div class="linea-division"></div>
                     <img class="accesorio" src="img/carusel/pelota.png" alt="">
-                    </div>
-            <div class="carousel-item">
-                <a href="htlm/galeria.html" target="_blank"><h2 class="subtitulo">Remeras</h2></a>
-                <img class="accesorio" src="img/carusel/remera.png" alt="">
                 </div>
-            <div class="carousel-item">
-                <a href="htlm/galeria.html" target="_blank"><h2 class="subtitulo">Camperas</h2></a>
-                <img class="accesorio" src="img/carusel/campera.png" alt="">
+                <div class="carousel-item">
+                    <a href="htlm/galeria.html" ><h2 class="subtitulo">Remeras</h2></a>
+                    <img class="accesorio" src="img/carusel/remera.png" alt="">
                 </div>
-            <div class="carousel-item">
-                <a href="htlm/galeria.html" target="_blank"><h2 class="subtitulo">Zapatillas</h2></a>
-                <img class="accesorio" src="img/carusel/zapatillas.png" alt="">
+                <div class="carousel-item">
+                    <a href="htlm/galeria.html" ><h2 class="subtitulo">Camperas</h2></a>
+                    <img class="accesorio" src="img/carusel/campera.png" alt="">
                 </div>
-            <div class="carousel-item">
-                <a href="htlm/galeria.html" target="_blank"><h2 class="subtitulo">Bolsos</h2></a>
-                <img class="accesorio" src="img/carusel/bolso.png" alt="">
+                <div class="carousel-item">
+                    <a href="htlm/galeria.html" ><h2 class="subtitulo">Zapatillas</h2></a>
+                    <img class="accesorio" src="img/carusel/zapatillas.png" alt="">
+                </div>
+                <div class="carousel-item">
+                    <a href="htlm/galeria.html" ><h2 class="subtitulo">Bolsos</h2></a>
+                    <img class="accesorio" src="img/carusel/bolso.png" alt="">
                 </div>
             </div>
         </div>
