--- a/htlm/galeria.html
+++ b/htlm/galeria.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="../css/index.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="../javascript/js.js"></script>
+
+    <!-- <script src="../javascript/js.js"></script> -->
    
     <!--Para los iconos de las card-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Icons+Outlined">
@@ -17,9 +17,11 @@
     <script src="../javascript/js_galeria.js"></script> 
     <script src="../javascript/productos.js"></script> 
 
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/mediaq.css">
+
     <!--Los estilos de la galeria los agrego en este archivo, luego los unificamos-->
     <link rel="stylesheet" href="../css/estilos_galeria.css">
-    <link rel="stylesheet" href="../css/mediaq_mss.css">
 
     <title>SportAr | Galeria</title>
 </head>
@@ -29,7 +31,6 @@
          Solo modifique la referencia al index, porque estoy adentro de la carpeta html -->
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
     <div class="header"><header><img class="logo" src="../img/logo.png" alt=""></header> </div>
 
     <nav class="menu">   
