--- a/contacto.html
+++ b/contacto.html
@@ -4,16 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilos_contacto.css">
     <link rel="icon" href="img/percha.ico">
     <title>SportAr | Contacto</title>
     <script src="/javascript/contacto.js"> </script>
+ 
+ 
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/mediaq.css">
+
+    <link rel="stylesheet" href="css/estilos_contacto.css">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
     <!-- Font Awesome (Iconos)-->
     <script src="https://kit.fontawesome.com/0447e33465.js" crossorigin="anonymous"></script>
 </head>
 <body>
     
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <div class="header">
         <header><img class="logo" src="img/logo.png" alt=""></header> 
     </div>
@@ -26,7 +34,7 @@
     </nav>
 
     <div id="container">
-        <h1>Contáctenos</h1>
+        <h1 class="titulo">Contáctenos</h1>
 
         <form method="post" id="contact_form">
             
