--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
 
     <!-- <link rel="stylesheet" href="css/mq_index.css"> -->
-    <link rel="stylesheet" href="css/mediaq_mss.css">
+    <link rel="stylesheet" href="css/mediaq.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="javascript/js.js"></script>
