--- a/faq.html
+++ b/faq.html
@@ -9,12 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="css\faq.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300&family=Tillana&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/faq.css">
-    <link rel="icon" href="img/percha.ico">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/mediaq.css">
 </head>
 
 
