arreglo de css contactos

--- a/contacto.html
+++ b/contacto.html
@@ -7,8 +7,7 @@
     <link rel="icon" href="img/percha.ico">
     <title>SportAr | Contacto</title>
     <script src="/javascript/contacto.js"> </script>
- 
- 
+
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/mediaq.css">
 
@@ -21,7 +20,6 @@
 </head>
 <body>
     
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <div class="header">
         <header><img class="logo" src="img/logo.png" alt=""></header> 
     </div>
@@ -34,7 +32,7 @@
     </nav>
 
     <div id="container">
-        <h1 class="titulo">Contáctenos</h1>
+        <h1 class="h1Contactenos">Contáctenos</h1>
 
         <form method="post" id="contact_form">
             
