--- a/contacto.html
+++ b/contacto.html
@@ -34,7 +34,7 @@
     <div id="container">
         <h1 class="h1Contactenos">Contáctenos</h1>
 
-        <form action="https://formsubmit.co/julian.dran22@gmail.com" method="post" id="contact_form">
+        <form action="https://formsubmit.co/julian.dran22@gmail.com" method="post" id="contact_form"> <!--Poner su mail en el link para que le llegue la info del formulario-->
             
             <div class="nombre">
                 <label for="name"></label>
