--- a/contacto.html
+++ b/contacto.html
@@ -59,7 +59,7 @@
             <div class="submit">
                 <input type="submit" value="Enviar" id="boton" />
             </div>
-            <!--<p id="warnings"></p>-->
+            <p id="warnings"></p>
         </form>
     </div>
 
