--- a/contacto.html
+++ b/contacto.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/percha.ico">
     <title>SportAr | Contacto</title>
-    <script src="/javascript/contacto.js"> </script>
+    <script src="javascript/contacto.js"> </script>
 
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/mediaq.css">
