--- a/contacto.html
+++ b/contacto.html
@@ -37,17 +37,17 @@
             
             <div class="nombre">
                 <label for="name"></label>
-                <input type="text" placeholder="Nombre" id="name" name="name" required>
+                <input type="text" placeholder="Nombre" id="name" name="from_name" required>
             </div>
 
             <div class="apellido">
                 <label for="lastname"></label>
-                <input type="text" placeholder="Apellido" id="lastname" name="lastname" required>
+                <input type="text" placeholder="Apellido" id="lastname" name="from_lastname" required>
             </div>
 
             <div class="email">
                 <label for="email"></label>
-                <input type="email" placeholder="Correo electrónico" id="email" name="email" required>
+                <input type="email" placeholder="Correo electrónico" id="email" name="from_email" required>
             </div>
 
             <div class="message">
